@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.6416 2004/07/01 17:15:33 adrianp Exp $
+$NetBSD: CHANGES,v 1.6417 2004/07/01 20:15:28 abs Exp $
 
 Changes to the packages collection and infrastructure in 2004:
 
@@ -3204,3 +3204,5 @@ Changes to the packages collection and infrastructure in 2004:
 	Updated wmi to 8nb1 [seb 2004-07-01]
 	Updated liferea to 0.5.1 [minskim 2004-07-01]
 	Updated snort to 2.1.3 [adrianp 2004-07-01]
+	Update pkglint to 3.84 [abs 2004-07-01]
+
